cluster/core/monitoring/kube-prometheus-stack/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`prometheus.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: security-header
          namespace: networking
      services:
        - name: prometheus-prometheus
          namespace: monitoring
          port: 9090
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
